Минимальный черновой AuthService

--- a/src/API/Adult.API/appsettings.json
+++ b/src/API/Adult.API/appsettings.json
@@ -3,10 +3,9 @@
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Adult;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "IdentityConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Adult.Identity;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
-    "Secret": "StrONGKAutHENTICATIONKEy"
+  "JwtConfiguration": {
+    "LifeTime": "0.10:00:00",
+    "Key": "mysupersecret_secretkey!123"
   },
   "Logging": {
     "LogLevel": {
