Заменил юзера его свойствами в GetUser

--- a/src/API/Adult.API/Adult.API.csproj
+++ b/src/API/Adult.API/Adult.API.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="MapperProfiles\Core\" />
+    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
